# embedded

./: README.md
embedded_lab/: Cargo.toml  README.md
embedded_lab/.cargo/: config.toml
embedded_lab/applications/esp32/hal/blink/: Cargo.toml
embedded_lab/applications/esp32/hal/blink/src/: main.rs
embedded_lab/applications/esp32/hal/bmp280/: Cargo.toml
embedded_lab/applications/esp32/hal/bmp280/src/: main.rs
embedded_lab/applications/esp32/hal/dinghy_sail_tools/: Cargo.toml  README.md  layout.wasm
embedded_lab/applications/esp32/hal/dinghy_sail_tools/.cargo/: config.toml
embedded_lab/applications/esp32/hal/dinghy_sail_tools/src/: battery.rs  board.rs  display.rs  domain.rs  main.rs  parsing.rs  ports.rs  wasm.rs
embedded_lab/applications/esp32/hal/dinghy_sail_tools/src/display/: conf.rs  init.rs  mod.rs
embedded_lab/applications/esp32/hal/dinghy_sail_tools/src/gps/: conf.rs  mod.rs  parsing.rs
embedded_lab/applications/esp32/hal/dinghy_sail_tools/src/power_managment/: voltage.rs
embedded_lab/applications/esp32/hal/k2000/: Cargo.toml
embedded_lab/applications/esp32/hal/k2000/src/: main.rs
embedded_lab/applications/esp32/idf/blink_idf/: .gitignore  Cargo.toml
embedded_lab/applications/esp32/idf/blink_idf/src/: main.rs
embedded_lab/drivers/common/: Cargo.toml
embedded_lab/drivers/common/src/: lib.rs
embedded_lab/drivers/gps_driver/: Cargo.toml
embedded_lab/drivers/gps_driver/src/: lib.rs
embedded_lab/tools/wasm-compiler/: Cargo.toml
embedded_lab/tools/wasm-compiler/.cargo/: config.toml
embedded_lab/tools/wasm-compiler/src/: main.rs
embedded_lab/wasm/dst_display_mod/: Cargo.toml  rust-toolchain.toml
embedded_lab/wasm/dst_display_mod/src/: lib.rs
esp32/esp32-blink/: Cargo.toml
esp32/esp32_blink_hal/: Cargo.toml
esp32/esp32_blink_hal/src/: main.rs
esp32/esp32_blink_idf/: Cargo.toml
esp32/esp32_bmp280/: Cargo.toml
esp32/esp32_bmp280/src/: main.rs
esp32/esp32_bmp280_compact/.cargo/: config.toml
esp32/esp32_bmp280_compact/src/: main.rs
esp32/esp32_bmp280_wifi/: Cargo.toml  version.md
esp32/esp32_bmp280_wifi/src/: main.rs
esp32/esp32_canbus/: Cargo.toml
esp32/esp32_gps_async/: Cargo.toml
esp32/esp32_gps_async/src/: domain.rs  lib.rs  parsing.rs
esp32/esp32_led_k2000_hal/src/: main.rs
esp32/esp32_neo6m/: Cargo copy.toml  Cargo.toml
esp32/esp32_neo6m/.cargo/: config.toml
esp32/esp32_neo6m/src/: board.rs  conf.rs  display.rs  domain.rs  main.rs  parsing.rs  ports.rs  utils.rs
esp32/esp32_neo6m/src/display/: mod.rs
esp32/esp32_neo6m/src/gps/: parsing.rs
esp32/esp32_neo6m/src/power_managment/: mod.rs  voltage.rs
unit_tests/src/: domain.rs  main.rs
