[package]
name = "esp32_blink_idf"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
# Utilisons des versions cohérentes de la même génération
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45"
esp-idf-svc = { version = "0.51", features = ["std", "binstart"] }
log = "0.4"
anyhow = "1"

[build-dependencies]
embuild = "0.33"
anyhow = "1"