[package]
name = "esp32-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.20.1", features = ["esp32"] }
esp-backtrace = { version = "0.14.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12.0", features = ["esp32"] }
bme280 = "0.5.1"
embedded-hal = "1.0.0"

esp-wifi = { version = "0.8.0", features = ["esp32", "esp-now"] }

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "z"