[package]
edition = "2021"
name    = "esp32_canbus"
version = "0.1.0"

[[bin]]
name = "esp32_canbus"
path = "./src/bin/main.rs"

[dependencies]
esp-hal                = { version = "0.22", features = ["esp32"] }
# Pour afficher des messages sur la console série
esp-println = { version = "0.12", features = ["esp32"] }
# Pour avoir une backtrace en cas de panique
esp-backtrace = { version = "0.14.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
# Le trait `nb` (non-blocking) est souvent utilisé par les HALs
nb = "1.1"

critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
