[package]
edition = "2021"
name    = "esp32_gps_async"
version = "0.1.0"

[[bin]]
name = "esp32_gps_async"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32", "unstable"] }
esp-println = { version = "0.14.0", features = ["esp32"] }


critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = "0.4.0"
esp-hal-embassy  = { version = "0.8.1", features = ["esp32"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }

nmea = { version = "0.7.0", default-features = false }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
