[package]
name = "esp32-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32"] }
esp-backtrace = { version = "0.14", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32"] }

nb = "1.1.0"
nmea = { version = "0.6.0", default-features = false }

embedded-hal = "1.0"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = "z"